src/styles/global.scss
html {
    // --primary-hue: 265;
    --primary-hue: 150;

    --color-background: light-dark(#f1f5f9, #101010);
    --color-text: light-dark(#101010, #f1f5f9);
    --color-white: light-dark(#f6f9fc, #151515);
    --color-black: light-dark(#151515, #f6f9fc);
    --color-white-bg: light-dark(
        rgba(255, 255, 255, 0.5),
        rgba(30, 30, 30, 0.75)
    );
    --color-gray-5: light-dark(
        oklch(96.8% 0.007 247.896),
        oklch(10.8% 0.007 247.896)
    );
    --color-gray-10: light-dark(
        oklch(92.9% 0.013 255.508),
        oklch(30.9% 0.013 255.508)
    );
    --color-gray-25: light-dark(
        oklch(70.4% 0.04 256.788),
        oklch(40.4% 0.04 256.788)
    );
    --color-gray-50: light-dark(
        oklch(55.4% 0.046 257.417),
        oklch(45.4% 0.046 257.417)
    );
    --color-gray-75: light-dark(
        oklch(27.9% 0.041 260.031),
        oklch(80.9% 0.041 260.031)
    );
    --color-primary: light-dark(
        oklch(38% 0.25 var(--primary-hue)),
        oklch(80% 0.08 var(--primary-hue))
    );
    --color-primary-50--opaque: light-dark(
        oklch(85% 0.03 var(--primary-hue)),
        oklch(35% 0.03 var(--primary-hue))
    );
    --color-primary-50: light-dark(
        oklch(30% 0.4 var(--primary-hue) / 0.05),
        oklch(70% 0.08 var(--primary-hue) / 0.1)
    );
    --color-primary-100: light-dark(
        oklch(30% 0.4 var(--primary-hue) / 0.15),
        oklch(70% 0.08 var(--primary-hue) / 0.25)
    );
    --color-primary-150: light-dark(
        oklch(30% 0.4 var(--primary-hue) / 0.5),
        oklch(70% 0.08 var(--primary-hue) / 0.6)
    );

    --spacing-10: 0.25rem;
    --spacing-20: 0.5rem;
    --spacing-30: 1rem;
    --spacing-40: 1.5rem;
    --spacing-50: 2.5rem;

    --width-content: 640px;
    --width-wide: 820px;
    --gutter: var(--spacing-40);

    --transition-duration: 500ms;
    --transition-func: cubic-bezier(0.8, 0, 0.2, 1);
    --transition: var(--transition-duration) var(--transition-func);

    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }
}

@media screen and (prefers-color-scheme: light) {
    .dark-only {
        display: none;
    }
}

@media screen and (prefers-color-scheme: dark) {
    :root {
        color-scheme: dark;
    }

    .light-only {
        display: none;
    }
}

::selection {
    background-color: var(--color-primary);
    color: var(--color-white);
}

body {
    padding: 0;
    margin: 0;
    background-color: var(--color-background);
    color: var(--color-text);
    // font-family: "Albert Sans", sans-serif;
    font-family: "Atkinson Hyperlegible Next", sans-serif;
    display: grid;
    grid-template-rows: auto 1fr auto;
    min-height: 100svh;
    -webkit-tap-highlight-color: transparent;
}

header,
main > *,
footer {
    margin: 0 auto;
    max-width: var(--width-content);
    width: 100%;
    padding-inline: var(--gutter);

    &.alignwide {
        max-width: var(--width-content);
    }

    &.alignfull {
        padding-inline: none;
        max-width: none;
    }
}

footer {
    padding-block: var(--gutter);
}

* {
    box-sizing: border-box;
}

h1 {
    margin: 1rem 0;
    font-size: 1.5rem;
    letter-spacing: -1%;
}

h2 {
    font-size: 1.25rem;
    font-weight: 600;
    letter-spacing: -1%;
}

h3 {
    font-weight: 600;
    letter-spacing: -1%;
}

h1,
h2,
h3 {
    a {
        color: inherit;
    }
}

p {
    margin-block: var(--spacing-30);
}

p,
li,
button {
    line-height: 1.5;
}

a {
    color: var(--color-primary);
    text-decoration: none;
}

main p a {
    background-image: linear-gradient(currentColor, currentColor);
    background-position: left 95%;
    background-repeat: no-repeat;
    background-size: 100% 1px;
    transition: background-size var(--transition);

    &:hover {
        background-size: 0% 1px;
        background-position: right 95%;
        transition: background-size var(--transition);
    }
}

section {
    padding-block: var(--spacing-40);
}

section:first-of-type {
    padding-top: 0;
}

nav,
.social-links {
    display: inline-flex;
    align-items: center;
    gap: 1rem;
}

nav.main-nav,
footer,
.social-links,
.color-scheme-toggles {
    a,
    button {
        color: var(--color-gray-75);
        transition:
            color var(--transition),
            opacity var(--transition);

        &:hover,
        &:focus-visible {
            color: var(--color-text);
        }
    }

    &:not(footer) {
        &:hover a:not(:hover),
        &:focus-within a:not(:focus-visible),
        &:hover button:not(:hover),
        &:focus-within button:not(:focus-visible) {
            opacity: 0.5;
        }
    }
}

button {
    cursor: pointer;
    padding: none;
    border: none;
    background: none;
    font-size: 1rem;
}

hr {
    opacity: 0.15;
}

.grid {
    display: grid;
    gap: var(--spacing-30);
}

.flex {
    display: flex;
    align-items: center;
    gap: var(--spacing-20);
    flex-wrap: wrap;
}

.list-style-none {
    padding: 0;
    margin: 0;
    list-style: none;

    li {
        margin: 0;
    }
}

.tag {
    font-size: 0.75rem;
    text-transform: uppercase;
}

.chip {
    display: inline-flex;
    align-items: center;
    border-radius: 2rem;
    font-size: 0.875rem;
    color: var(--color-primary);
    border: 1px solid var(--color-primary-50);
    padding: 0.25em 0.75em;
    background-color: var(--color-primary-50);
    overflow: hidden;
    transition:
        opacity var(--transition),
        color var(--transition),
        border var(--transition);

    &__number {
        display: flex;
        padding-left: 0.625em;
        margin-left: 0.625em;
        position: relative;

        &::after {
            content: "";
            background-color: var(--color-primary-50);
            position: absolute;
            inset: -1em -1em -1em 0;
        }
    }

    &--active {
        color: var(--color-white) !important;
        background-color: var(--color-primary);
        border-color: var(--color-primary);
    }

    &:where(a):hover {
        border-color: var(--color-primary-100);
    }

    &:where(a):focus-within {
        border-color: var(--color-primary);
        outline: none;
    }
}

footer {
    .copyright {
        margin: 0;
    }

    .footer-bottom {
        margin-top: 0.75rem;
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    .social-links {
        gap: 0.75rem;
    }

    .social-link {
        display: flex;

        svg {
            height: 1.125em;
            width: 1.125em;
        }
    }

    @media screen and (hover: none) {
        // @media screen and (max-width: 800px) { for debugging
        button,
        a {
            &:has(svg, .svg) {
                position: relative;

                &::after {
                    content: "";
                    display: block;
                    position: absolute;
                    inset: -0.75rem;
                }
            }

            svg,
            .svg {
                font-size: 1.5rem;
            }
        }

        .color-scheme.color-scheme {
            gap: 0.5rem;
        }

        .social-links {
            gap: 1.25rem;
        }
    }
}

